fixed code blocks on mobile, hopfefully

--- a/pages/style.css
+++ b/pages/style.css
@@ -74,7 +74,7 @@ code{
     padding: 10pt;
     border-radius: 10px;
     display:inline-block;
-    max-width: 85%;
+    max-width: 95%;
     overflow-x: auto;
 
 }
